--- a/vignettes/vpc-exact-bins.Rmd
+++ b/vignettes/vpc-exact-bins.Rmd
@@ -14,11 +14,18 @@ knitr::opts_chunk$set(
 )
 ```
 
-This vignette will review the limitations of the `vpc()` function in the `vpc` package for datasets containing exact bins as the motivating reason for development `plot_vpc_exactbins()`. The `vpc::vpc()`function offers a lot of great functionality to generate VPC plots including combining the data processing and plotting steps into one function call, built in options for automatic binning, an easy option for prediction-correction, and functionality for processing data accounting for censoring at the lower limit of quantification (LLOQ). 
+This vignette will review the limitations of the `vpc()` function in the `vpc` package for datasets containing an exact binning variable. This was the motivating reason for development of `plot_vpc_exactbins()`. 
 
-However, although `vpc()` contains many great options to automatically identify bins in the data, it is not optimized for input data containing exact bins. 
+The `vpc`package offers a lot of great functionality to generate VPC plots including, but certainly not limited to: 
 
-Let's get started. First, we will load the required packages.
+1) data processing and visualization steps combined in one function
+2) built-in options for automatic binning for datasets without a binned variable
+3) build-in option for prediction-correction
+4) built-in option for censoring at the lower limit of quantification (LLOQ) 
+
+However, although `vpc()` contains many great options to automatically identify bins in the data, it is not optimized to leverage input datasets with variable a variable representing exact bin times (e.g., nominal, or protocol-specified, times). 
+
+First, we will load the required packages.
 
 ```{r setup, echo=TRUE, warning=FALSE}
 options(scipen = 999, rmarkdown.html_vignette.check_title = FALSE)
@@ -30,19 +37,28 @@ library(mrgsolve, warn.conflicts =  FALSE)
 library(withr, warn.conflicts =  FALSE)
 ```
 
-Next let's explore our input dataset `data_sad`. This dataset was generated via simulation from the mrgsolve `model` internal to the pmxhelpr package. We can take a quick look at the dataset using `glimpse()` from the dplyr package.
+Next let's explore the input dataset, `data_sad`. This dataset was generated via simulation from `model`, an `mrgsolve` model internal to the pmxhelpr package. 
+
+We can take a quick look at the dataset using `glimpse()` from the dplyr package.
 
 ```{r data-glimpse}
 glimpse(data_sad)
 ```
 
-We can see that this dataset is already formatted for modeling. It contains NONMEM and mrgsolve reserved variables (e.g., ID, TIME, AMT, EVID, MDV), as well as, the dependent variable of drug concentration in original, untransformed units (ODV) and natural logarithm transformed units (LDV). In addition to the numeric variables there are two character variables: USUBJID and PART. There are two unique values of PART indicating two distinct study cohorts: Single Ascending Dose (SAD) and Food Effect (FE).
+We can see that this dataset is already formatted for modeling. It contains NONMEM reserved variables (e.g., ID, TIME, AMT, EVID, MDV), as well as, dependent variables of drug concentration in original units (ODV) and natural logarithm transformed units (LDV). In addition to the numeric variables, there are two character variables: USUBJID and PART. PART specifies the two study cohorts: 
+
+  - Single Ascending Dose (SAD)
+  - Food Effect (FE).
 
 ```{r data-part}
 unique(data_sad$PART)
 ```
 
-This dataset also contains an exact binning variable: Nominal Time (NTIME). This variable represents the nominal time of sample collection relative to first dose per study protocol whereas Actual Time (TIME) represents the actual time the sample was collected.
+This dataset also contains an exact binning variable: 
+
+  - Nominal Time (NTIME). 
+
+This variable represents the nominal time of sample collection relative to first dose per study protocol whereas Actual Time (TIME) represents the actual time the sample was collected.
 
 ```{r data-ntime}
 ##Unique values of NTIME
@@ -99,16 +115,18 @@ ggplot(aes(x = TIME, y = DV, col = `Dose (mg)`), data = plot_data)+
   theme_bw()
 ```
 
-Luckily for us, someone has already fit a PK model to these data! Let's load the mrgsolve model file internal to the pmxhelpr package by calling `model_mread_load()` and take a look at it with `mrgsolve::see()`.
+Luckily for us, someone has already fit a PK model to these data! Let's load `model` by calling `model_mread_load()` and take a look at it with the `see()` function from the `mrgsolve` package.
 
 ```{r model_mread_load}
 model <- model_mread_load("model")
 see(model)
 ```
 
-Unluckily for us, no one has validated this PK model! Therefore, we need to generate some Visual Predictive Checks (VPCs) to validate the model. We will use `df_mrgsim_replicate()` to run the simulation for the VPC. This is a wrapper function for `mrgsim_df()`, which uses `lapply()` to iterate the simulation over integers from 1 to replicates.
+Unluckily for us, no one has validated this PK model! Therefore, we need to generate some Visual Predictive Checks (VPCs). 
 
-We can pass `data_sad` and `model` from the previous steps to the data and model arguments, respectively, and run the simulation for 100 `replicates`. The names of actual and nominal time variables in `data_sad` match the default arguments; however, our dependent variable is named `"ODV"`, which must be specified in the output_vars argument. 
+We will use `df_mrgsim_replicate()` to run the simulation for the VPC. `df_mrgsim_replicate()` is a wrapper function for `mrgsim_df()`, which uses `lapply()` to iterate the simulation over integers from 1 to the value passed to the argument `replicates`.
+
+We can pass `data_sad` and `model` from the previous steps to the `data` and `model` arguments, respectively, and run the simulation for 100 `replicates`. The names of actual and nominal time variables in `data_sad` match the default arguments; however, our dependent variable is named `"ODV"`, which must be specified in the output_vars argument. 
 
 **Note: Currently output variables `IPRED` and `DV` are required in `model` capture statement**
 
@@ -129,9 +147,9 @@ glimpse(simout)
 max(simout$SIM)
 ```
 
-The maximum value of our replicate count variable (default = `"SIM"`) indicates that the dataset has been replicated 100 times, as requested with the `replicates` argument. 
+The maximum value of our replicate count variable (default = `"SIM"`) indicates that the dataset has been replicated 100 times. 
 
-Glimpsing the output from `df_mrgsim_replicate()` reveals the following model outputs: 
+Glimpsing the output reveals the following model outputs: 
 
   - `PRED` (population prediction)
   - `IPRED` (individual prediction)
@@ -147,9 +165,9 @@ Now that we have run the simulation, we generate our VPC plots using `vpc()`.The
   - `kmeans`: K-means clustering.
   - `pretty`, `quantile`, `hclust`, `sd`, `bclust`, `fisher`. Methods provided by the classInt package, see the package help for more information.
 
-We can visualize the bins assigned by the various binning approaches in `vpc()` using by assigning the plot as an R object and calling `plot_object$data`.
+We can visualize the bins assigned by the various binning approaches in `vpc()` using by assigning the plot as an object , let's call it `plot_object`, and calling `plot_object$data`.
 
-Because we have multiple dose levels in the SAD portion of the study, as well as, a food effect cohort, prediction correction will be used to plot all the data on a single plot using the argument `pred_corr = TRUE`.
+Because we have multiple dose levels in the SAD portion of the study, as well as, a food effect cohort, prediction-correction will be used to plot all the data on a single plot using the argument `pred_corr = TRUE`.
 
 ```{r plot-jenks, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 vpc_jenks <- vpc(
@@ -170,7 +188,7 @@ vpc_jenks <- vpc(
 vpc_jenks
 ```
 
-This plot looks pretty good! The default binning in `vpc::vpc()` produce a very nice looking plot. However, all of the binning methods internal to `vpc()` are designed to determine binning intervals from the actual data. Currently, there is no method to use *exact bins contained in the data* in place of *bin intervals determined from the data*. The presence of exact bins in the data is a common scenario in pharmacometrics, as Clinical Study Protocols usually specify specific Study Visits corresponding ot each sample, which are associated with a nominal (protocolized) time of collection.
+This plot looks pretty good! The default binning in `vpc::vpc()` produce a very nice looking plot. However, all of the binning methods internal to `vpc()` are designed to determine binning intervals from the data. Currently, there is no method to use *exact bins contained in the data* in place of *bin intervals determined from the data*. The presence of exact bins in the data is a common scenario in pharmacometrics, as Clinical Study Protocols usually specify specific Study Visits corresponding ot each sample, which are associated with a nominal (protocol-specified) time of collection.
 
 We can use the `df_nobsbin()` function to calculate and return a summary data.frame containing the unique exact bin times, count of non-missing observations (EVID=0 & MDV=0), and count of missing (EVID=0 & MDV=1) observations.
 
@@ -215,7 +233,7 @@ df_nobsbin(data_sad, bin_var = "NTIME")
 distinct(select(vpc_pretty$data, bin_mid, bin_min, bin_max))
 ```
 
-The `bins = "kmeans"` option produces yet another reasonably visually appealing plot; however, like `bins = "pretty"` it groups many of the absorption phase timepoints together and does not include the last three sampling times with quantifiable observations in simulated intervals. 
+The `bins = "kmeans"` option produces yet another reasonable plot; however, like `bins = "pretty"`, it groups many of the absorption phase timepoints together and does not include the last three sampling times with quantifiable observations in simulated intervals. 
 
 ```{r plot-kmeans, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 vpc_kmeans <- vpc(
@@ -244,7 +262,7 @@ df_nobsbin(data_sad, bin_var = "NTIME")
 distinct(select(vpc_kmeans$data, bin_mid, bin_min, bin_max))
 ```
 
-The native binning methods `density` attempts to bin the data by finding the nadir in the density function. In this case, we can try and inform the binning algorithm on how many bins we *expect* in the data. Let's pass the length of the vector of unique `NTIME` values in our dataset to the `n_bins` argument and see if the `density` approach can find the correct bins.
+The native binning method `density` attempts to bin the data by finding the nadir in the density function. In this case, we can try and inform the binning algorithm on how many bins we *expect* in the data. Let's pass the length of the vector of unique `NTIME` values in our dataset to the `n_bins` argument and see if the `density` approach can find the correct bins.
 
 ```{r plot-density, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 vpc_density <- vpc(
@@ -312,7 +330,7 @@ vpc_data
 vpc_time
 ```
 
-These methods are designed to equalize data density in each bin, which unsurprisingly does not produce binning consistent with the exact bins in our dataset.
+These methods are designed to equalize data density in each bin, which  does not produce binning consistent with the exact bins in our dataset.
 
 ```{r bins-data-time}
 ##Exact bins in the input data
@@ -325,7 +343,9 @@ distinct(select(vpc_data$data, bin_mid, bin_min, bin_max))
 distinct(select(vpc_time$data, bin_mid, bin_min, bin_max))
 ```
 
-The pmxhelpr function `plot_vpc_exactbins()` is a wrapper function for `vpc()` which is optimized for input datasets containing exact bins. This wrapper passes the the unique exact bins (e.g., Nominal Times) in the input dataset as bin boundaries with the addition of `Inf` to the end of the vector to ensure that the final exact bin is included, rather than set only as a bin boundary. This functionality can be reproduced using `vpc()` by passing a vector of unique exact bins to `bins` with the addition of `Inf` as follows:
+The pmxhelpr function `plot_vpc_exactbins()` is a wrapper function for `vpc()`, which is optimized for input datasets containing exact bins. This wrapper passes the the unique exact bins (e.g., nominal times) in the input dataset as bin boundaries with the addition of `Inf` to the end of the vector to ensure that the final exact bin is included, rather than set only as a boundary. 
+
+This functionality can be reproduced using `vpc()` by passing a vector of unique exact bins to `bins` with the addition of `Inf` as follows:
 
 - `bins = c(sort(unique(simout$NTIME)), Inf)`
 
@@ -349,7 +369,9 @@ vpc_exact_ntime <- vpc(
 vpc_exact_ntime
 ```
 
-However, this workaround will only work if the idv is set to the nominal time variable (`idv = "NTIME`) in both the `sim_cols` and `obs_cols` arguments, which precludes us from plotting the actual observed data points by actual time (`"TIME"`) while binned summary statistics are calculated based on the exact bins defined by nominal time (`NTIME`). `plot_vpc_exactbins()` gets around this limitation by plotting the observed data in a separate layer on top of the plot object returned by `vpc()`, including prediction-correction of those observed points if `pcvpc = TRUE` (also passed along to the `pred_corr` argument of `vpc()`)
+However, this workaround only works if `idv` is set to the nominal time variable (`idv = "NTIME`) in both `sim_cols` and `obs_cols`, which removes the option to plot the observationsby actual time (`"TIME"`). 
+
+`plot_vpc_exactbins()` gets around this limitation by plotting the observed data in a separate layer on top of the plot object returned by `vpc()`, including prediction-correction of those observed points if `pcvpc = TRUE` (also passed along to the `pred_corr` argument of `vpc()`).
 
 ```{r plot-exact, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 vpc_exact <- plot_vpc_exactbins(
@@ -367,9 +389,9 @@ vpc_exact <- plot_vpc_exactbins(
 vpc_exact
 ```
 
-The difference in plotting the observed prediction-corrected data points by `"TIME"` versus `"NTIME"` is negligible for this example dataset, due to the high concordance between `"TIME"` and `"NTIME"` in this well controlled example Phase 1 study. However, this difference is often much larger for pooled analyses including later phase clinical studies where plotting the observed points versus actual time will result in a plot that is much more representative of the distribution of times in the model training dataset.
+The difference in plotting the observed prediction-corrected data points by `"TIME"` versus `"NTIME"` is negligible for this example dataset, due to the high concordance between `"TIME"` and `"NTIME"` in this example Phase 1 study. However, this difference is often much larger for pooled analyses including later phase clinical studies where plotting the observed points versus actual time will result in a plot that is much more representative of the distribution of times in the model training dataset.
 
-When exploring the bins in the input and output datasets using `plot_vpc_exactbins()`, we now can see that they are consistent! Huzzah!
+When exploring the bins in the input and output datasets using `plot_vpc_exactbins()`, we now see that they are consistent! Huzzah!
 
 ```{r bins-exact}
 ##Exact bins in the input data
@@ -380,16 +402,16 @@ distinct(select(vpc_exact$data, bin_mid, bin_min, bin_max))
 
 ```
 
-`plot_vpc_exactbins()` also contains an argument built around a function we introduced earlier (`df_nobsbin()`). The argument `min_bin_count` (default = 1) filters out exact bins with fewer quantifiable observations than the minimum set by this argument. Importantly, the observed data points in these small bins are *still plotted*; however, they do not influence the calculation of summary statistics or summary plot elements (shaded intervals, lines). This provides the greatest fidelity to the data being analyzed without introducing visual artifacts due to small sample timepoints.
+`plot_vpc_exactbins()` also contains an argument built around a function we introduced earlier (`df_nobsbin()`). The argument `min_bin_count` (default = 1) filters out exact bins with fewer quantifiable observations than the minimum set by this argument. Importantly, the observed data points in these small bins are *still plotted*; however, they do not influence the calculation of summary statistics or summary plot elements (shaded intervals, lines). This provides the greatest fidelity to the data visualized without introducing visual artifacts due to small sample timepoints.
+
+Additionally, because our plot input dataset `simout` was generated using `df_mrgsim_replicate`, the `time_vars` and `output_vars` match the default values, so we do not need to specify these arguments and they can be removed. Furthermore, the `pi` and `ci` arguments we are specifying match the default 90% PI and CI in `vpc()` and can be removed.
+
+When setting`min_bin_count = 10`, summary statistics are not plotted for the final two timepoint containing only fewer than 10 quantifiable observations; however, the observations themselves are still plotted.
 
 ```{r plot-exact-min-bin-count, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 vpc_exact_bin_gt10 <- plot_vpc_exactbins(
   sim = simout, 
   pcvpc = TRUE,
-  time_vars = c(TIME = "TIME", NTIME = "NTIME"),
-  output_vars = c(PRED = "PRED", IPRED = "IPRED", SIMDV = "SIMDV", OBSDV = "OBSDV"),
-  pi = c(0.05, 0.95),
-  ci = c(0.05, 0.95),
   min_bin_count = 10,
   log_y = TRUE,
   xlab = "Time (hours)",
@@ -399,19 +421,13 @@ vpc_exact_bin_gt10 <- plot_vpc_exactbins(
 vpc_exact_bin_gt10
 ```
 
-When setting`min_bin_count = 10`, summary statistics are not plotted for the final two timepoint containing only fewer than 10 quantifiable observations; however, the observations themselves are still plotted.
-
-We can also pass stratifying variables to the argument `strat_var` in order to facet our plots by relevant extrinsic study design covariates or intrinsic subject covariates. The stratify variables specified in `strat_var` are also passed to the `stratify` argument of `vpc()` in order to facet the resulting plots. Currently, only one variable can be passed to this argument.
+We can also pass stratifying variables to the argument `strat_var` in order to facet our plots by relevant covariate conditions. The stratification variables specified in `strat_var` are also passed to the `stratify` argument of `vpc()`, in order to facet the resulting plots. Currently, only one variable can be passed to this argument.
 
 ```{r plot-exact-one-strata, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 vpc_exact_food <- plot_vpc_exactbins(
   sim = mutate(simout, FOOD_f = factor(FOOD, levels = c(0,1), labels = c("Fasted", "Fed"))), 
   strat_vars = "FOOD_f",
   pcvpc = TRUE,
-  time_vars = c(TIME = "TIME", NTIME = "NTIME"),
-  output_vars = c(PRED = "PRED", IPRED = "IPRED", SIMDV = "SIMDV", OBSDV = "OBSDV"),
-  pi = c(0.05, 0.95),
-  ci = c(0.05, 0.95),
   log_y = TRUE,
   xlab = "Time (hours)",
   ylab = "PRED-corrected Concentration (ng/mL)"
