--- a/vignettes/vpc-obs-quant-blq-cens.Rmd
+++ b/vignettes/vpc-obs-quant-blq-cens.Rmd
@@ -197,7 +197,8 @@ vpc_blq_drop <- plot_vpc_exactbins(
   xlab = "Time (hours)",
   ylab = "Concentration (ng/mL)",
   strat_var = "PART"
-)
+) +
+  scale_x_continuous(breaks = seq(0,168,24))
 
 vpc_blq_drop
 ```
@@ -217,7 +218,8 @@ vpc_blq_qobs_cens <- plot_vpc_exactbins(
   ylab = "Concentration (ng/mL)",
   strat_var = "PART",
   loq = 1
-)
+) +
+  scale_x_continuous(breaks = seq(0,168,24))
 
 vpc_blq_qobs_cens
 ```
@@ -244,7 +246,8 @@ vpc_pc <- plot_vpc_exactbins(
   ylab = "Concentration (ng/mL)",
   pcvpc = TRUE,
   loq = 1
-)
+) +
+  scale_x_continuous(breaks = seq(0,168,24))
 
 vpc_pc
 ```
